# Bllools

./: .gitignore  README.md  bllose_install_exe.bat  crawler_zzj_exe.bat  eqb_install_exe.bat
bllose-config/: pyproject.toml  requirements.txt  setup.py  upload_reqs.py
bllose-config/bllose/config/: Config.py
bllose-helper/: pyproject.toml  requirements.txt  setup.py
bllose-helper/bllper/: ExtensionsVsCodeDownloadUrl.py  TransTimeFormatter.py  compress.py  cryptox509Helper.py  fileHelper.py  sysHelper.py
bllose-helper/bllper/email/: auto_email.py  outlook_email.py
bllose-helper/bllper/java/: FeignHelper.py
bllose-helper/bllper/media/: SpeechToText.py  VoskSpeechToText.py  audio.py
bllose-spider/: pyproject.toml  setup.py
bllose-spider/bllospider/common/: MySelenium.py
bllose-spider/bllospider/exceptions/: NeedRestartError.py
bllose-spider/bllospider/gov/zjj/estates/: info_platform.py
bllose-spider/bllospider/gov/zjj/estates/constants/: TableColumns.py
bllose-spider/bllospider/gov/zjj/estates/vos/: MainTableVO.py  SeatInfoVO.py
bllose-spider/bllospider/gov/zxgk/shixin/: AliBailianImageRecognize.py  DoubaoImageRecognize.py  chrome_test.py  orcTool.py  recognize1.py  recognize2.py  recognize3.py  shixin.py  shixin2.py  shixin_main.py  shixin_monitor_capatch.py  shixin_monitor_window.py  shixin_platform.py  shixin_task_all.py  shixin_task_unit.py  shixin_tasks.py
bllose-spider/bllospider/gov/zxgk/shixin/share/: contents.py
bllose-spider/bllospider/huggingface/: deepseekr1.py
bllose-spider/bllospider/tcl/: MoBanYinQin.py  SpringBootAdmin.py
(+172 files in other folders)
