[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bllose"
version = "0.1.1"
description = "自用轮子"
authors = [ "Bllose",]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "==41.0.3"
openpyxl = "==3.1.5"
psutil = "==6.1.1"
pycryptodome = "==3.21.0"
