[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bllospider"
version = "0.1.0"
dependencies = [
    "selenium==4.32.0",
    "selenium-wire==5.1.0",
    "blinker==1.6.2",
    "pandas==2.2.3",
    "openai==1.78.0",
    "javaproperties==0.8.2",
    "openpyxl==3.1.5",
    "pyyaml==6.0.2"
]
dynamic = [
    "description",
    "requires-python",
    "authors",
    "classifiers"
]